2017-08-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/affine.cpp (affineWithRebuiltCurveEngine): Correction to BKTree
	* src/RcppExports.cpp: Updated with current Rcpp Attributes
	* inst/include/RQuantLib_RcppExports.h: Ditto
	* R/RcppExports.R: Ditto

2017-04-16  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (before_install): Use https to download

2016-11-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/rquantlib_impl.h (Rcpp): Adjust to new date(time)Vector
	classes in Rcpp 0.12.8

	* inst/unitTests/cpp/dates.cpp: Add one explicit copy where we used
	to have implicit copy

	* src/Makevars.in (PKG_CXXFLAGS): Set define for new date(time)vector
	classes to work with Rcpp 0.12.8; has no effect on earlier versions

2016-10-31  Dirk Eddelbuettel  <edd@debian.org>

	* src/vanilla.cpp (europeanOptionEngine, americanOptionEngine):
	Correct use of divtimes in case of no high-res. times in QuantLib;
	only use duration type when high-res time defined

2016-10-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/vanilla.cpp (europeanOptionEngine, americanOptionEngine):
	Use Nullable<> on dividend parameters, other small rewrites
	* R/options.R: Corresponding changes

2016-10-24  Francois Cocquemas  <hfty@hfty.in>

        * src/vanilla.cpp: Adjust intra-daily part (via patch by Dirk)

2016-10-23  Dirk Eddelbuettel  <edd@debian.org>

        * man/BermudanSwaption.Rd: Add links to SabrSwaption

2016-10-22  Francois Cocquemas  <hfty@hfty.in>

        * R/option.R: Support discrete dividends for European and
        American options
        * src/vanilla.cpp: Ditto
        * man/EuropeanOption.Rd: Documentation update
        * man/AmericanOption.Rd: Ditto
        * tests/RQuantLib.R: Added test

2016-08-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION(Version): Rolled minor version to 0.4.3.1

	* configure.ac: Require at least QuantLib 1.8
	* configire: Rebuilt

	* NAMESPACE: Also import zoo from zoo