@@ -1,7 +1,7 @@
 Package: RQuantLib
 Title: R Interface to the 'QuantLib' Library
-Version: 0.4.3.2
-Date: 2016-10-28
+Version: 0.4.3.3
+Date: 2017-08-03
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Author: Dirk Eddelbuettel, Khanh Nguyen (during 2009-2010), Terry Leitch (2016)
 Description: The 'RQuantLib' package makes parts of 'QuantLib' accessible from R
